--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,4 +23,4 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: sudo apt-get install xvfb
-    - run: xvfb-run --server-args="-screen 0, 1280x1024x8" --auto-servernum npm test
+    - run: xvfb-run -a -n 0 -s “-screen 0 1920x1080x24”  --auto-servernum npm test
