--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,4 +23,4 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: sudo apt-get install -y xvfb
-    - run: xvfb-run -s "-ac -screen 0 1440x900x24" --auto-servernum npm test
+    - run: xvfb-run --auto-servernum npm test
