--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,4 +23,6 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: sudo apt-get install -y xvfb
-    - run: xvfb-run --auto-servernum npm test
+    - run: export DISPLAY=':99.0'
+    - run: Xvfb :99 -screen 0 1440x900x24 > /dev/null 2>&1 &
+    - run: npm test -- --verbose
