--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,7 +22,10 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    - run: sudo apt-get install -y xvfb
+    - run: sudo apt-get install -y xvfb wget
+    - run: |
+        wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+        dpkg -i google-chrome-stable_current_amd64.deb; apt-get -fy install
     - run: export DISPLAY=':99.0'
     - run: Xvfb :99 -screen 0 1440x900x24 > /dev/null 2>&1 &
     - run: npm test -- --verbose
