--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Nightwatch 2 example project which runs the bundled examples in Github Actions against Google Chrome",
   "main": "index.js",
   "scripts": {
-    "test": "nightwatch --env chrome"
+    "test": "nightwatch --env firefox examples/tests/ecosia.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/nightwatchjs/nightwatch-examples#readme",
   "devDependencies": {
     "chromedriver": "^97.0.2",
+    "geckodriver": "^3.0.1",
     "nightwatch": "^2.0.1"
   }
 }
