--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x]
+        node-version: [12.x, 14.x, 16.x]
 
     steps:
     - uses: actions/checkout@v2
@@ -22,8 +22,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    - run: mkdir -p screens
-
+    - run: mkdir -p screens logs
     - run: sudo apt-get install xvfb
     - run: xvfb-run --auto-servernum npm test
 
@@ -39,3 +38,16 @@ jobs:
       if: always()
       run: ls -R
       working-directory: screens/
+
+    - name: Upload logs
+      if: always()
+      uses: actions/upload-artifact@v2.2.0
+      with:
+        name: Logs
+        path: logs/
+        retention-days: 1
+
+    - name: Display structure of log files
+      if: always()
+      run: ls -R
+      working-directory: logs/
