updated package info

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nightwatch-examples",
   "version": "0.1.0",
-  "description": "A Nightwatch 2 example project which runs the bundled examples in Github Actions against Google Chrome",
+  "description": "A Nightwatch 2 boilerplate project which runs the bundled examples in Github Actions against Google Chrome",
   "main": "index.js",
   "scripts": {
     "test": "nightwatch"
