--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   "homepage": "https://github.com/nightwatchjs/nightwatch-examples#readme",
   "devDependencies": {
     "chromedriver": "^97.0.2",
-    "nightwatch": "^2.0.2"
+    "nightwatch": "^2.0.4"
+  },
+  "dependencies": {
+    "@cucumber/cucumber": "^7.3.2"
   }
 }
