--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,7 +25,7 @@ jobs:
     - run: mkdir -p screens logs
     - run: sudo apt-get install xvfb
     - name: Run Nightwatch tests
-      run: xvfb-run --auto-servernum npm test -- --env chrome --verbose
+      run: xvfb-run --auto-servernum npm test -- --env chrome
 
     - name: Upload screenshots
       if: always()
