--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,7 +35,7 @@ jobs:
       with: 
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: './tests_output/nightwatch-html-report'
-        keep_files: true
+        force_orphan: true
         user_name: "gravityvi"
         user_email: "ravisawlani04@gmail.com"
 
