--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,6 +36,7 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: './tests_output/nightwatch-html-report'
         force_orphan: true
+        keep_files: true
         user_name: "gravityvi"
         user_email: "ravisawlani04@gmail.com"
 
