--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,7 +27,7 @@ jobs:
     - run: mkdir -p screens logs
     - run: sudo apt-get install xvfb
     - name: Run Nightwatch tests
-      run: xvfb-run --auto-servernum npm test -- --env chrome
+      run: xvfb-run --auto-servernum npm test -- --env chrome --trace
       
     - name: "Publish test results"
       if: always()
