--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Nightwatch 2 boilerplate project which runs the bundled examples in Github Actions against Google Chrome",
   "main": "index.js",
   "scripts": {
-    "test": "nightwatch"
+    "test": "nightwatch tests/guide/"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,11 @@
   "homepage": "https://github.com/nightwatchjs/nightwatch-examples#readme",
   "dependencies": {
     "@cucumber/cucumber": "^8.2.1",
-    "chromedriver": "^107.0.3",
-    "nightwatch": "^2.6.1"
+    "nightwatch": "^2.6.11"
+  },
+  "devDependencies": {
+    "@nightwatch/selenium-server": "^4.5.0",
+    "chromedriver": "^109.0.0",
+    "nightwatch-axe-verbose": "^2.1.0"
   }
 }
