install latest version of nightwatch

--- a/.github/workflows/browserstack.yml
+++ b/.github/workflows/browserstack.yml
@@ -21,6 +21,7 @@ jobs:
           node-version: 18
           cache: 'npm'
       - run: npm ci
+      - run: npm install nightwatch@latest
       - name: Run tests
         run: npm test -- --env browserstack
 
