fix cloud-provider workflow

--- a/.github/workflows/browserstack.yml
+++ b/.github/workflows/browserstack.yml
@@ -12,8 +12,8 @@ jobs:
       - name: 'Browserstack env setup'
         uses: browserstack/github-actions/setup-env@master
         with:
-          username: ${{BROWSERSTACK_USERNAME}}
-          access-key: ${{BROWSERSTACK_ACCESS_KEY}}
+          username: ${{ secrets.BROWSERSTACK_USERNAME }}
+          access-key: ${{ secrets.BROWSERSTACK_ACCESS_KEY }}
 
       - name: 'Nightwatch tests'
         uses: actions/checkout@v2
